src/test/deca/context/invalid/created/testOpArith/moduloBoolean.deca
// Description :
//    Test invalide : Opération de modulo sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 11: IncompatibleTypesException: Modulo operation can only be applied to integer types.

{
    boolean a = false; 
    boolean b = true;
    b = a % b;  //Opération de modulo sur des booléens non autorisée
}
